# ot-harjoitustyo

./: .gitignore  README.md
Peli/: .coveragerc  pyproject.toml
Peli/dokumentaatio/: arkkitehtuuri.md  changelog.md  käyttöohje.md  tuntikirjanpito.md  vaatimusmäärittely.md
Peli/src/: asteroid.py  bullet.py  game_ui.py  highscore.py  maingame.py
Peli/src/tests/: asteroid_test.py  bullet_test.py  gameplay_test.py  highscore_test.py
laskarit/dokumentaatio/: .pylintrc  changelog.md  pyproject.toml  tasks.py
laskarit/dokumentaatio/src/: asteroid.py  maingame.py
laskarit/dokumentaatio/src/tests/: gameplay_test.py
laskarit/viikko1/: gitlog.txt  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: maksukortti_test.py
