[tool.poetry]
name = "dokumentaatio"
version = "0.1.0"
description = "Avaruus peli"
authors = ["iroguin <143116756+Iroguin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
coverage = "^7.8.0"
invoke = "^2.2.0"
pylint = "^3.3.6"
autopep8 = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
